cmake_minimum_required(VERSION 2.0)

SET (INPUT_TEMPLATE "input.tmpl")
SET (OUTPUT_SOURCE "output.cpp")


ADD_CUSTOM_COMMAND(OUTPUT ${CMAKE_CURRENT_SOURCE_DIR}/${OUTPUT_SOURCE}
  COMMAND bash generator.sh ${CMAKE_CURRENT_SOURCE_DIR}/${INPUT_TEMPLATE} ${CMAKE_CURRENT_SOURCE_DIR}/${OUTPUT_SOURCE}
  DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${INPUT_TEMPLATE}
  WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
)

ADD_CUSTOM_TARGET(GENERATOR_PARSER ALL
    DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/${OUTPUT_SOURCE}
)

PROJECT (test)

ADD_EXECUTABLE (test ${CMAKE_CURRENT_SOURCE_DIR}/${OUTPUT_SOURCE})
ADD_DEPENDENCIES(test GENERATOR_PARSER)
